<resources>
    <string name="app_name">慧聘通</string>
    <string name="app_name_cn">慧聘通</string>
    <string name="medical_mission_service_name">MedicalMissionService</string>
    <string name="net_error"><Data><![CDATA[网络连接不可用<br/>请检查您的网络设置]]></Data></string>
    <string name="confirm">确定</string>
    <string name="confirm_sure">确认</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="reset">重置</string>
    <string name="app_name_en">MedicalPay</string>

    <string name="balance">结算</string>

    <string name="greetings">Hi,早上好</string>
    <string name="hospital_name">广州天河普济门诊</string>
    <string name="user_name">林小超</string>

    <string name="account">账号</string>
    <string name="name">姓名</string>
    <string name="mi_stoping">停保</string>
    <string name="department">所属单位</string>
    <string name="fixed_number">定点编号</string>
    <string name="current_version">当前版本</string>
    <string name="clean_caching">清除缓存</string>
    <string name="search_tip">请输入药品名称</string>
    <string name="common_drugs">常用药品</string>
    <string name="creat_prescription">创建处方</string>
    <string name="continue_add">继续添加</string>
    <string name="delivery_time">送达时间</string>
    <string name="time">时间</string>
    <string name="drugs_number">药品数量</string>
    <string name="drugs_total_price">药品总价</string>
    <string name="request_refund">申请退款</string>
    <string name="print_bill">打印账单</string>
    <string name="buy_again">再次购买</string>
    <string name="swing_tips">请引导患者刷医保卡</string>
    <string name="order_total_price">订单金额</string>
    <string name="order_origin_price">订单原价</string>
    <string name="order_discount_price">优惠金额</string>
    <string name="patient_pay">患者支付</string>
    <string name="drugs_name">药品名称</string>
    <string name="monitoring_code">电子监管码</string>
    <string name="unit_price">单价</string>
    <string name="buy_count">购买数量</string>
    <string name="specifications">规格</string>
    <string name="deliveryed">已送达</string>
    <string name="medical_insurance_tips">温馨提示:使用医保卡，药品的医保报销金额需经过医保局计价后，方能确认。</string>
    <string name="use_medical_insurance">使用医保卡</string>
    <string name="medical_insurance_reimbursement">医保报销</string>
    <string name="submit_order">提交订单</string>
    <string name="real_payment">实付款:</string>
    <string name="medical_insurance_num">医保卡号</string>
    <string name="medical_insurance_info">医保卡信息</string>
    <string name="balance_after_pay">付后余额</string>
    <string name="pay_patient">患者自付</string>
    <string name="person_account">个人账户</string>
    <string name="overall_payment">统筹支付</string>

    <string name="account_num">13097340227</string>
    <string name="pos_swing">POS刷卡</string>
    <string name="confirm_pay">确认支付</string>
    <string name="order_details">订单交易详情</string>
    <string name="medical_calc_info">药品计费信息</string>
    <string name="order_num">订单号</string>
    <string name="pay_way">支付方式</string>
    <string name="buy_drug_way">购药方式</string>
    <string name="durgstore_name">药店名称</string>
    <string name="durgstore_address">药店地址</string>
    <string name="deliverer_name">送货人</string>
    <string name="consignee_name">收货人</string>
    <string name="contact_number">联系电话</string>
    <string name="contact_address">联系地址</string>
    <string name="address">地址</string>
    <string name="order_time">下单时间</string>
    <string name="trading_time">交易时间</string>
    <string name="bar_code">条形码</string>
    <string name="bar_code_input_tips">请输入条形码</string>
    <string name="switch_scan_code">切换扫码</string>

    <string name="system_busy_tips">系统繁忙,请稍后重试</string>
    <string name="recent_search">最近搜索</string>
    <string name="medical_insurance_balance">医保卡余额</string>
    <string name="chronic_diseases">慢性病购药</string>
    <string name="normal_diseases">普通购药</string>
    <string name="scan_code_tip">将药品条形码/处方二维码放到框内</string>
    <string name="refunded">退款完成</string>
    <string name="application_refunded">申请退款</string>
    <string name="pay_fail_tips">服务器连接超时，医保系统服务器崩溃</string>
    <string name="activation_tips">激活您的设备</string>
    <string name="login_tips">医保智能支付系统</string>
    <string name="login_user_hint">请输入登录账户</string>
    <string name="find_new_pw_hint">请设置新密码(限6-12位字母或数字)</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="login_password_hint">请输入登录密码</string>
    <string name="activation_hint">请输入六位激活码</string>
    <string name="submit">提交</string>
    <string name="phone_number">手机号</string>
    <string name="password">密\t\t码</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="register">立即注册</string>
    <string name="login">登录</string>
    <string name="new_password">新密码</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="reset_password">重置密码</string>
    <string name="identification">身份证</string>
    <string name="identification_number">身份证号</string>
    <string name="insurance_type">医保类型</string>
    <string name="unit_name">单位名称</string>
    <string name="chronic_disease_registration">慢性病种登记</string>
    <string name="limited_chronic_diseases">慢性病限额剩余</string>
    <string name="medical_insurance_use_way">医保使用方式</string>
    <string name="get_medical_by_id">身份证读取医保账户</string>
    <string name="get_medical_by_card">刷医保实体卡</string>
    <string name="next_step">下一步</string>
    <string name="birth_time">出生日期</string>
    <string name="medical_info">医保信息</string>
    <string name="insured_place">参保地</string>
    <string name="medical_account">医保账号</string>
    <string name="query_insurance_medical_fail">获取医保账户失败</string>
    <string name="no_insurance_medical_account">该证件没有医保卡账户</string>
    <string name="wechatpay_alipay">支付宝/微信支付</string>
    <string name="logout">退出登录</string>
    <string name="use_department">使用单位</string>
    <string name="legal_representative">法人代表</string>
    <string name="issuing_bank">发行银行</string>
    <string name="publishers">发行人员</string>
    <string name="publish_date">发行日期</string>
    <string name="pay_success">支付成功</string>
    <string name="del">删除</string>
    <string name="close">关闭</string>
    <string name="show_elec_code_tips">购买药品的电子监管码</string>
    <string name="show_elec_code_simple_tips">电子监管码是每盒药品的\n防伪码。以此追溯药品来\n源，可防止假药。</string>
    <string name="scan_elec_code_tips">将药品电子监管码放到框内</string>
    <string name="input_elec_code_tips">请输入电子监管码</string>
    <string name="insured_location">参保州市</string>
    <string name="insured_type">参保类型</string>
    <string name="retake">重新拍摄</string>
    <string name="use_picture">使用相片</string>
    <string name="normal_picture">标准相片</string>
    <string name="take_picture">拍照相片</string>
    <string name="use_picture_tips">"注意事项\n

1、拍摄时尽量选择纯色背景\n

2、确保脸部光线均匀，不要曝光严重</string>


    <string name="text_price"><Data><![CDATA[<font><small>¥</small></font>%1$s]]></Data></string>
    <string name="text_count"><Data><![CDATA[<font><big>%1$s</big></font>]]></Data></string>
    <!--<string name="text_count"><Data><![CDATA[共<font><big>%1$s</big></font>件商品]]></Data></string>-->

    <!--字体大小-->
    <dimen name="mid_text_size">18sp</dimen>
    <dimen name="text_size_16sp">16sp</dimen>
    <dimen name="text_size_38px">20sp</dimen>
    <dimen name="text_size_26px">14sp</dimen>
    <dimen name="text_size_18sp">18sp</dimen>
    <dimen name="text_size_14sp">14sp</dimen>
    <dimen name="text_size_12sp">12sp</dimen>

    <!--表单项高度-->
    <dimen name="form_height">45dp</dimen>
    <!--tab高度-->
    <dimen name="tab_height">40dp</dimen>
    <dimen name="title_height">48dp</dimen>
    <!--分隔条高度-->
    <dimen name="divider_block_height">10dp</dimen>


</resources>
